@@ -1,54 +1,0 @@
-begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
-begin_package
-package|package
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|swing
-operator|.
-name|components
-package|;
-end_package
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|JTextField
-import|;
-end_import
-
-begin_class
-specifier|public
-class|class
-name|LimitedJTextField
-extends|extends
-name|JTextField
-block|{
-specifier|public
-name|LimitedJTextField
-parameter_list|(
-name|int
-name|limit
-parameter_list|)
-block|{
-name|setDocument
-argument_list|(
-operator|new
-name|LimitedDocument
-argument_list|(
-name|limit
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-end_class
-
-end_unit
-
