@@ -19,6 +19,16 @@ name|javax
 operator|.
 name|swing
 operator|.
+name|JTextField
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
 name|text
 operator|.
 name|AttributeSet
@@ -52,10 +62,50 @@ end_import
 begin_class
 specifier|public
 class|class
+name|LimitedTextField
+extends|extends
+name|JTextField
+block|{
+specifier|private
+specifier|static
+specifier|final
+name|long
+name|serialVersionUID
+init|=
+literal|5615520143950793884L
+decl_stmt|;
+specifier|public
+name|LimitedTextField
+parameter_list|(
+name|int
+name|limit
+parameter_list|)
+block|{
+name|setDocument
+argument_list|(
+operator|new
+name|LimitedDocument
+argument_list|(
+name|limit
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
+specifier|static
+class|class
 name|LimitedDocument
 extends|extends
 name|PlainDocument
 block|{
+specifier|private
+specifier|static
+specifier|final
+name|long
+name|serialVersionUID
+init|=
+literal|2371422073526259311L
+decl_stmt|;
 specifier|private
 name|int
 name|limit
@@ -125,6 +175,7 @@ argument_list|,
 name|attr
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 block|}
